# llm-eval-observability

./: .gitignore  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
app/: eval.py  llm.py  logger.py  main.py
